force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/clofor_com_cfs__PayrollSlip__c.object-meta.xml
<CustomObject>
    <label>給料明細</label>
    <nameField>
        <displayFormat>PS-{000000}</displayFormat>
        <label>PAYROLL SLIP ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>