force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__ActualGasolineAllowance__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ActualGasolineAllowance__c</fullName>
    <formula>clofor_com_cfs__EmployeeID__r.clofor_com_cfs__GasolineAllowance__c  *  clofor_com_cfs__PercentageOfPaidDay__c</formula>
    <inlineHelpText>Actual Gasoline Allowance=Gasoline Allowance in Employee* Percentage of Paid Day</inlineHelpText>
    <label>ACTUAL GASOLINE ALLOWANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>