force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__ActualGrossBase__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ActualGrossBase__c</fullName>
    <formula>clofor_com_cfs__ActualSalary__c   +  clofor_com_cfs__Incentives__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual Gross Base=Actual Salary+Incentives</inlineHelpText>
    <label>ACTUAL GROSS BASE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>