force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__ActualMealAllowance__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ActualMealAllowance__c</fullName>
    <formula>clofor_com_cfs__EmployeeID__r.clofor_com_cfs__Meal_Allowance__c</formula>
    <inlineHelpText>Monthly Actual Meal Allowance=Meal Allowance Per Day in Employee* Actual Worked Date</inlineHelpText>
    <label>ACTUAL MEAL ALLOWANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>