force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__actualnetincome__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__actualnetincome__c</fullName>
    <formula>clofor_com_cfs__incomeaftertaxes__c + clofor_com_cfs__Arrears_backpay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Net Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>