force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__actualnetincomePR__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__actualnetincomePR__c</fullName>
    <description>This fields is update by workflow rule &amp; used to update to Payroll via rollup function.</description>
    <inlineHelpText>This fields is update by workflow rule &amp; used to update to Payroll via rollup function.</inlineHelpText>
    <label>Actual Net Income - PR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>