force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__ActualPayrollPaidDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ActualPayrollPaidDate__c</fullName>
    <label>ACTUAL PAYROLL PAID DATE</label>
    <type>Date</type>
</CustomField>