force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__ActualRelocationAllowance__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ActualRelocationAllowance__c</fullName>
    <formula>clofor_com_cfs__EmployeeID__r.clofor_com_cfs__RelocationAllowance__c  *  clofor_com_cfs__PercentageOfPaidDay__c</formula>
    <inlineHelpText>Actual Relocation Allowance=Relocation Allowance in Employee* Percentage of Paid Day</inlineHelpText>
    <label>ACTUAL RELOCATION ALLOWANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>