force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__ActualUniformAllowance__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ActualUniformAllowance__c</fullName>
    <formula>clofor_com_cfs__EmployeeID__r.clofor_com_cfs__UniformAllowance__c</formula>
    <inlineHelpText>Actual Uniform Allowance=Uniform Allowance in Employee* Percentage of Paid Day</inlineHelpText>
    <label>ACTUAL UNIFORM ALLOWANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>