force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__ActualWorkedPaidLeaveDay__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ActualWorkedPaidLeaveDay__c</fullName>
    <formula>clofor_com_cfs__ActualWorkedDay__c  +  clofor_com_cfs__NumberOfDaysForPaidLeave__c +  clofor_com_cfs__holidayleave__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual Worked &amp; Paid Leave Day=Actual Worked Day+Number of Days For Paid Leave</inlineHelpText>
    <label>ACTUAL WORKED &amp; PAID LEAVE DAY</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>