force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__Arrears_backpay__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Arrears_backpay__c</fullName>
    <label>Arrears/Back pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>