force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__BankAccountPayrollPaid__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BankAccountPayrollPaid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK ACCOUNT-PAYROLL</label>
    <referenceTo>clofor_com_cfs__BankAccount__c</referenceTo>
    <relationshipName>PAYROLL_SLIP</relationshipName>
    <type>Lookup</type>
</CustomField>