force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__BonusIncentivesID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BonusIncentivesID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BONUS &amp; INCENTIVES ID</label>
    <referenceTo>clofor_com_cfs__BonusIncentivesCalculation__c</referenceTo>
    <relationshipName>PayrollSlip</relationshipName>
    <type>Lookup</type>
</CustomField>