force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__BusinessWorkingDay__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BusinessWorkingDay__c</fullName>
    <label>BUSINESS WORKING DAY</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>