force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__EmployeeNetTakenHomeChecking__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EmployeeNetTakenHomeChecking__c</fullName>
    <formula>clofor_com_cfs__ActualGrossBase__c  -  clofor_com_cfs__TotalWithholdingAfterDeduction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EMPLOYEE NET TAKEN HOME CHECKING</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>