force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__Financial_year__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Financial_year__c</fullName>
    <formula>YEAR( clofor_com_cfs__PayrollOrder__r.clofor_com_cfs__PayPeriodStartDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>