force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__hrpolicy__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__hrpolicy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HR Policy</label>
    <referenceTo>clofor_com_cfs__HRStandard__c</referenceTo>
    <relationshipLabel>PAYSLIP</relationshipLabel>
    <relationshipName>PAYSLIP</relationshipName>
    <type>Lookup</type>
</CustomField>