force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__Incentivebyquarta__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Incentivebyquarta__c</fullName>
    <label>Incentive by quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>