force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__insurancededuction__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__insurancededuction__c</fullName>
    <formula>clofor_com_cfs__totalamountofinsuranceemployerside__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Equal Total amount of insurance</inlineHelpText>
    <label>Insurance deduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>