force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__MonthlyActualOvertimeAllowance__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MonthlyActualOvertimeAllowance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MONTHLY ACTUAL OVERTIME ALLOWANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>