force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__NumberOfDaysForPaidLeave__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__NumberOfDaysForPaidLeave__c</fullName>
    <label>NUMBER OF DAYS FOR PAID LEAVE</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>