force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__otherdeduction__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__otherdeduction__c</fullName>
    <formula>clofor_com_cfs__TotalActualAllowance__c +(( clofor_com_cfs__totalovertime__c -( clofor_com_cfs__Overtime1__c +clofor_com_cfs__Overtime2__c+clofor_com_cfs__overtime3__c))*( clofor_com_cfs__salarybyworkingday__c / clofor_com_cfs__StandardWorkingday__c /8))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other deduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>