force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__Overtime2__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Overtime2__c</fullName>
    <label>Over time 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>