force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__PaymentTermPayroll__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaymentTermPayroll__c</fullName>
    <label>PAYMENT TERM-PAYROLL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__PaymentTerm</valueSetName>
    </valueSet>
</CustomField>