force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__paymenttype__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__paymenttype__c</fullName>
    <label>Payment type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Workday</fullName>
                <default>true</default>
                <label>Workday</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>