force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__PayPeriodStartDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PayPeriodStartDate__c</fullName>
    <label>PAY PERIOD START DATE</label>
    <type>Date</type>
</CustomField>