force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__Payroll_ID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Payroll_ID__c</fullName>
    <label>Payroll ID</label>
    <length>21</length>
    <type>Text</type>
</CustomField>