force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__PayrollCreditAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PayrollCreditAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PAYROLL CREDIT ACCOUNTING CODE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipName>PAYROLL_CREDIT</relationshipName>
    <type>Lookup</type>
</CustomField>