force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__PayrollOrder__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PayrollOrder__c</fullName>
    <label>PAYROLL ORDER</label>
    <referenceTo>clofor_com_cfs__PayrollOrder__c</referenceTo>
    <relationshipName>PAYROLL_SLIP</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>