force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__PayslipBankTransactionCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PayslipBankTransactionCode__c</fullName>
    <inlineHelpText>Input Bank Transaction Code from Bank Slip</inlineHelpText>
    <label>PAYSLIP BANK TRANSACTION CODE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>