force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__PayslipIssued__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PayslipIssued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAYSLIP ISSUED?</label>
    <type>Checkbox</type>
</CustomField>