force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__PayslipIssuedDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PayslipIssuedDate__c</fullName>
    <label>PAYSLIP ISSUED DATE</label>
    <type>Date</type>
</CustomField>