force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__PercentageOfPaidDay__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PercentageOfPaidDay__c</fullName>
    <formula>clofor_com_cfs__ActualWorkedPaidLeaveDay__c  /  clofor_com_cfs__BusinessWorkingDay__c</formula>
    <inlineHelpText>Percentage of Paid Day=Actual Worked &amp; Paid Leave Day/Business Working Day</inlineHelpText>
    <label>PERCENTAGE OF PAID DAY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>