force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__PIT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PIT__c</fullName>
    <label>PIT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>