force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__salarybyovertime__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__salarybyovertime__c</fullName>
    <formula>(( clofor_com_cfs__basicsalary__c + clofor_com_cfs__productivitysalary__c )/
( clofor_com_cfs__StandardWorkingday__c *8))* clofor_com_cfs__totalovertime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>[(Basic salary + Productivity salary)/(Standard Working day*8hours)]*Total Overtime</inlineHelpText>
    <label>Salary by overtime</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>