force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__salarybyworkingday__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__salarybyworkingday__c</fullName>
    <formula>(( clofor_com_cfs__basicsalary__c + clofor_com_cfs__productivitysalary__c)/ clofor_com_cfs__StandardWorkingday__c )* clofor_com_cfs__ActualWorkedPaidLeaveDay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>[ (Basic Salary + Productivity Salary) / Standard Working day ] * Actual Worked &amp; Paid Leave Day</inlineHelpText>
    <label>Salary by working day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>