force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__SocialInsuranceNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SocialInsuranceNumber__c</fullName>
    <formula>clofor_com_cfs__EmployeeID__r.clofor_com_cfs__SocialInsuranceNumber__c</formula>
    <label>SOCIAL INSURANCE NUMBER</label>
    <type>Text</type>
</CustomField>