force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__standardselfdeduction__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__standardselfdeduction__c</fullName>
    <formula>clofor_com_cfs__hrpolicy__r.clofor_com_cfs__StandardSelfDeduction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Deduction amount of employee</inlineHelpText>
    <label>Standard Self Deduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>