force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__taxableincome__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__taxableincome__c</fullName>
    <formula>clofor_com_cfs__totalincomebeforetax__c - clofor_com_cfs__totaldeduction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Equal Total income before tax - total deduction</inlineHelpText>
    <label>Taxable income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>