force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__Title__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Title__c</fullName>
    <formula>clofor_com_cfs__EmployeeID__r.clofor_com_cfs__Title__c</formula>
    <label>TITLE</label>
    <type>Text</type>
</CustomField>