force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__TotalActualAllowance__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalActualAllowance__c</fullName>
    <formula>clofor_com_cfs__ActualGasolineAllowance__c  +  clofor_com_cfs__ActualHousingAllowance__c   +  clofor_com_cfs__ActualMealAllowance__c   +  clofor_com_cfs__ActualRelocationAllowance__c   +  clofor_com_cfs__ActualTelephoneAllowance__c   +  clofor_com_cfs__ActualUniformAllowance__c  + 
 clofor_com_cfs__MonthlyActualOvertimeAllowance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Actual Allowance=Monthly Actual Uniform Allowance+Monthly Actual Housing Allowance\T\R\N+Monthly Actual Gasoline Allowance+Monthly Actual Telephone Allowance+Monthly Actual Relocation Allowance+Monthly Actual Meal Allowance</inlineHelpText>
    <label>TOTAL ACTUAL ALLOWANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>