force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__totalincomebeforetax__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__totalincomebeforetax__c</fullName>
    <formula>clofor_com_cfs__salarybyworkingday__c + clofor_com_cfs__salarybyovertime__c + clofor_com_cfs__TotalActualAllowance__c + clofor_com_cfs__bonus__c + clofor_com_cfs__Incentivebyquarta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Salary by working day + Salary by overtime + Monthly Total Actual Allowance + Bonus + Incentive by quarter</inlineHelpText>
    <label>Total income before tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>