force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__totalinsurance__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__totalinsurance__c</fullName>
    <formula>clofor_com_cfs__totalamountofinsuranceemployerside__c + clofor_com_cfs__totalwithholdingforinsurance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Include amount of insurance from both employer &amp; employee side</inlineHelpText>
    <label>TOTAL INSURANCE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>