force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__TotalWithholdingAfterDeduction__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalWithholdingAfterDeduction__c</fullName>
    <formula>clofor_com_cfs__TotalWithholding__c  -   clofor_com_cfs__TotalRefund__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Withholding After Refund Deduction=Total Withholding-Total Refund</inlineHelpText>
    <label>TOTAL WITHHOLDING AFTER REFUND DEDUCTION</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>