force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__totalwithholdingt__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__totalwithholdingt__c</fullName>
    <formula>clofor_com_cfs__PIT__c + clofor_com_cfs__totalamountofinsuranceemployerside__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Equal Total Withholding for Insurance + PIT</inlineHelpText>
    <label>Total Withholding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>