force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__unemploymentinsuranceemployerside__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__unemploymentinsuranceemployerside__c</fullName>
    <formula>clofor_com_cfs__SalaryToContributeSocialInsurance__c* clofor_com_cfs__hrpolicy__r.clofor_com_cfs__UnemploymentFundRatioByEmployer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>0% of Salary to Contribute Social Insurance</inlineHelpText>
    <label>Unemployment insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>