force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__unionfund__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__unionfund__c</fullName>
    <formula>clofor_com_cfs__hrpolicy__r.clofor_com_cfs__unionfundratiobyemployer__c * clofor_com_cfs__SalaryToContributeSocialInsurance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Union fund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>