force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__UnpaidBalancePayroll__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnpaidBalancePayroll__c</fullName>
    <formula>clofor_com_cfs__EmployeeNetTakenHome__c  -  clofor_com_cfs__AmoutPaidPayrollLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UNPAID BALANCE OF PAYROLL(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>