force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__withholdingcompulsorysocialinsurance__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__withholdingcompulsorysocialinsurance__c</fullName>
    <formula>clofor_com_cfs__SalaryToContributeSocialInsurance__c * clofor_com_cfs__hrpolicy__r.clofor_com_cfs__SocialInsuracneRatioByEmployee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Salary to Contribute Social Insurance * Social Insurance Ratio by Employee in HR policy</inlineHelpText>
    <label>Withholding Compulsory Social Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>