force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__Withholdingcompulsoryunemployeeinsurance__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Withholdingcompulsoryunemployeeinsurance__c</fullName>
    <formula>clofor_com_cfs__SalaryToContributeSocialInsurance__c *  clofor_com_cfs__hrpolicy__r.clofor_com_cfs__UnemploymentFundRatioByEmployee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Salary to Contribute Social Insurance * Unemployment Fund Ratio by Employee</inlineHelpText>
    <label>Withholding Compulsory Unemployee Ins</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>