force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__WithholdingPersonalIncomeTax__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WithholdingPersonalIncomeTax__c</fullName>
    <label>WITHHOLDING PERSONAL INCOME TAX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>