force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/fields/clofor_com_cfs__WithholdingSocialInsurance__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WithholdingSocialInsurance__c</fullName>
    <label>WITHHOLDING COMPULSORY SOCIAL INSURANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>