force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__EmployeeID__c</columns>
    <columns>clofor_com_cfs__PayrollOrder__c</columns>
    <columns>clofor_com_cfs__PayPeriodStartDate__c</columns>
    <columns>clofor_com_cfs__PayPeriodEndDate__c</columns>
    <columns>clofor_com_cfs__ActualSalary__c</columns>
    <columns>clofor_com_cfs__TotalActualAllowance__c</columns>
    <columns>clofor_com_cfs__Incentives__c</columns>
    <columns>clofor_com_cfs__ActualGrossBase__c</columns>
    <columns>clofor_com_cfs__WithholdingSocialInsurance__c</columns>
    <columns>clofor_com_cfs__WithholdingPersonalIncomeTax__c</columns>
    <columns>clofor_com_cfs__EmployeeNetTakenHome__c</columns>
    <columns>clofor_com_cfs__PayslipIssued__c</columns>
    <columns>clofor_com_cfs__PayslipIssuedDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>