force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/listViews/clofor_com_cfs__PayrollPaymentProcessing.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__PayrollPaymentProcessing</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__EmployeeID__c</columns>
    <columns>clofor_com_cfs__Department__c</columns>
    <columns>clofor_com_cfs__PayrollOrder__c</columns>
    <columns>clofor_com_cfs__FullName__c</columns>
    <columns>clofor_com_cfs__PayrollPaid__c</columns>
    <columns>clofor_com_cfs__ActualPayrollPaidDate__c</columns>
    <columns>clofor_com_cfs__PayslipIssued__c</columns>
    <columns>clofor_com_cfs__ActualSalary__c</columns>
    <columns>clofor_com_cfs__TotalWithholding__c</columns>
    <columns>clofor_com_cfs__TotalRefund__c</columns>
    <columns>clofor_com_cfs__TotalWithholdingAfterDeduction__c</columns>
    <columns>clofor_com_cfs__EmployeeNetTakenHome__c</columns>
    <columns>clofor_com_cfs__PayPeriodStartDate__c</columns>
    <columns>clofor_com_cfs__PayPeriodEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clofor_com_cfs__PayrollPaid__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>PAYROLL PAYMENT PROCESSING</label>
    <language>en_US</language>
</ListView>