force-app/main/default/objects/clofor_com_cfs__PayrollSlip__c/listViews/clofor_com_cfs__Update_Payslip.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__Update_Payslip</fullName>
    <columns>clofor_com_cfs__Payroll_ID__c</columns>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__FullName__c</columns>
    <columns>clofor_com_cfs__ActualWorkedDay__c</columns>
    <columns>clofor_com_cfs__basicsalary__c</columns>
    <columns>clofor_com_cfs__productivitysalary__c</columns>
    <columns>clofor_com_cfs__NumberOfDaysForPaidLeave__c</columns>
    <columns>clofor_com_cfs__unpaidleave__c</columns>
    <columns>clofor_com_cfs__bonus__c</columns>
    <columns>clofor_com_cfs__Incentivebyquarta__c</columns>
    <columns>clofor_com_cfs__totalincomebeforetax__c</columns>
    <columns>clofor_com_cfs__PIT__c</columns>
    <columns>clofor_com_cfs__incomeaftertaxes__c</columns>
    <filterScope>Everything</filterScope>
    <label>Update Payslip</label>
</ListView>